codex-rs/tui-pty-e2e/tests/snapshots/input_handling__history_navigation_multiple_messages.snap
---
source: tui-pty-e2e/tests/input_handling.rs
expression: normalize_for_input_snapshot(session.screen_contents())
---
› first message




• Mock response


› second message




• Mock response


› first message

  ⎇ master · Approvals: Agent
