codex-rs/tui-pty-e2e/tests/snapshots/input_handling__model_changed.snap
---
source: tui-pty-e2e/tests/input_handling.rs
assertion_line: 79
expression: normalize_for_input_snapshot(session.screen_contents())
---
■ Operation 'ListCustomPrompts' is not supported in ACP mode


› /model

  /model  choose what model and reasoning effort to use
