codex-rs/tui-pty-e2e/tests/snapshots/input_handling__typing_and_backspace.snap
---
source: tui-pty-e2e/tests/input_handling.rs
assertion_line: 52
expression: normalize_for_input_snapshot(session.screen_contents())
---
■ Operation 'ListCustomPrompts' is not supported in ACP mode


› Hel

  Nori v0.0.0
